# multi-agent-geopolitical-modeling

./: .gitignore  agent.py  config.py  country.py  equations.py  main.py  plots.py  pyproject.toml  simulation.py
